--- a/single-price-grid-component-master/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/single-price-grid-component-master/index.html
@@ -49,11 +49,8 @@
     </div>
   </main>
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://aradhita2001.github.io/">Aradhita</a>.</p>
   </footer>
 </body>
 </html>
