--- a/qr-code-component-main/qr-code-component-main/index.html
+++ b/qr-code-component-main/qr-code-component-main/index.html
@@ -32,9 +32,8 @@
   </main>
   
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Aradhita</a>.
-  </div>
+ <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://aradhita2001.github.io/">Aradhita</a>.</p>
+  </footer>
 </body>
 </html>
