--- a/testimonials-grid-section-main/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/testimonials-grid-section-main/index.html
@@ -97,9 +97,8 @@
     </div>
   </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://aradhita2001.github.io/">Aradhita</a>.</p>
+  </footer>
 </body>
 </html>
